# midi_clock

./: Cargo.toml  README.md  flash  memory.x
docs/: hardware.md
schematics/: README.MD  copy_schematic.sh  eagle.epf  schematic.brd  schematic.sch
schematics/libraries/DIN_5pin/: DIN_5pin.l#1  DIN_5pin.l#2  DIN_5pin.l#3  DIN_5pin.l#4  DIN_5pin.l#5  DIN_5pin.l#6  DIN_5pin.l#7  DIN_5pin.lbr
schematics/libraries/LCD-082-DIP/: lcd082dip.l#1  lcd082dip.l#2  lcd082dip.l#3  lcd082dip.l#4  lcd082dip.l#5  lcd082dip.l#6  lcd082dip.lbr  untitled.l#1  untitled.l#2  untitled.l#3  untitled.l#4  untitled.l#5  untitled.l#6
schematics/libraries/cherrymx-eagle-master/: cherrymx.lbr
src/: _main_lcd_test.rs  button.rs  buttons.rs  buttons_interrupts.rs  clock.rs  context.rs  debug.rs  display.rs  eeprom.rs  encoder.rs  main.rs  memory.rs  midi.rs  peripherals.rs  serial.rs  st7066.rs  statemachine.rs  timers.rs  triggers.rs  usart.rs  utils.rs
tests/: clock_readings_analyzer.py  readings_124hz_38400bps.txt  readings_124hz_prescaler12mhz.txt
tests/jitter_test/: readings_124hz_115200bps.txt  readings_300bpm_interaction.txt  readings_300bpm_s19200.txt  readings_320bpm.txt  readings_counter_restart.txt
tests/jitter_test/clock_analyzer/: clock_analyzer.ino
tools/clock_test/: README.md  clock_analyzer.py  readings_analyzer.py
tools/clock_test/clock_analyzer_firmware/: clock_analyzer_firmware.ino
tools/clock_test/readings/: readings_300bpm_interaction.txt
tools/jitter_test/: readings_124bpm.txt  readings_300bpm.txt
