[package]
name = "midi_clock"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
debug = []
clock_test = []

[profile.release]
opt-level = 'z' # turn on maximum optimizations. We only have 64kB
lto = true      # Link-time-optimizations for further size reduction
debug = false

[dependencies]
alloc-cortex-m = "0.4.1"
cortex-m = "0.7.3"
cortex-m-rt = "0.6.15"
embedded-graphics = "0.7.1"
embedded-hal = "0.2.5"
heapless = "0.7.3"
nb = "1.0.0"
numtoa = "0.2.4"
panic-halt = "0.2.0"
ssd1306 = "0.7.0"

[dependencies.stm32f1xx-hal]
# Bluepill contains a 64kB flash variant which is called "medium density"
features = ["stm32f103", "rt", "medium"]
version = "^0.6.1"
